plugins {
    id 'java'
}

group 'xyz.acevedosharp'
version '1.0'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
    maven { url "https://clojars.org/repo/" }
    maven { url "https://plugins.gradle.org/m2/" }
    maven {url "https://nexus.cs.upb.de/repository/maven-releases/"}
}

dependencies {
    implementation 'ai.libs:jaicore-ml:0.2.4'
    implementation 'ai.libs:hasco-core:0.2.4'
    implementation 'ai.libs:mlplan-weka:0.2.4'
    implementation 'com.github.mwever:gs-core:2.0.2-synchrofix'
    implementation 'com.github.graphstream:gs-ui-javafx:2.0-alpha'
    implementation 'com.github.graphstream:gs-algo:2.0-alpha'
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
